# medical-modality-expert

./: .gitignore  README.md  convert_zusammenfassung.py  ikim_execution_plan.md  pyproject.toml  setup.sh  zusammenfassung.docx
configs/: pretrain_cxr.yaml  pretrain_ecg.yaml  sft_cxr.yaml  sft_ecg.yaml  sft_qwen3_vl_2b.yaml
data/processed/chexpert_plus/: image_list.txt  test.csv  train.csv  val.csv
data/processed/ptbxl/: test.csv  train.csv  val.csv
docs/: data_catalog.md  engineering_decisions.md  literature.md  zusammenfassung.md
models/cxr/: adapter_config.json  logging.jsonl
models/ecg/: adapter_config.json  logging.jsonl
outputs/results/: examples.md  metrics.json  metrics.md
scripts/: convert_zusammenfassung.py  download_redivis.py  eda_cxr.py  evaluate.py  generate_examples.py  inference.py  join_chexpert_labels.py  make_jsonl.py  overnight.py  preprocess.py  resume_cxr.py  sample_datasets.py  train.py  verify_swift.py
scripts/data/: download_redivis.py  eda_cxr.py  eda_ecg.py  join_chexpert_labels.py  make_jsonl.py  sample_datasets.py
scripts/eval/: evaluate.py  generate_examples.py  inference.py
scripts/train/: overnight.py  train.py  verify_swift.py
