[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ikim-medical-ai"
version = "0.1.0"
description = "Medical AI fine-tuning with Qwen3-VL using ms-swift"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.3",
    "transformers>=4.57",
    "peft>=0.11",
    "ms-swift>=3.0",
    "wandb",
    "matplotlib",
    "numpy",
    "pandas",
    "scikit-learn",
    "wfdb",
    "Pillow",
    "qwen_vl_utils>=0.0.14",
    "decord",
    "accelerate>=0.30",
]

[project.optional-dependencies]
dev = [
    "ipykernel",
    "jupyter",
    "black",
    "ruff",
]

[tool.hatch.build.targets.wheel]
packages = ["scripts"]

[tool.uv.sources]
torch = { index = "pytorch-cpu" }

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.ruff]
line-length = 100
target-version = "py310"
